test_apps/test-typechecker/fail/variablenotdefined.app
// Variable a not defined

application test

section functions

globals {
  function do() {
    a := 3;
  }
}